# libhello

./: .gitignore  CMakeLists.patch  CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
.github/workflows/templates/vcpkg/: action.yml
.github/workflows/templates/xcopy/: action.yml
overlay/ports/freetype/: portfile.cmake
overlay/ports/libpng/: fix-pngfix.patch  portfile.cmake  vcpkg.json
overlay/trypletes/: Common.cmake  arm64-linux-shared.cmake  arm64-osx-shared.cmake  arm64-windows-shared.cmake  x64-linux-shared.cmake  x64-osx-shared.cmake  x64-windows-shared.cmake  x86-windows-shared.cmake
overlay_trypletes/: arm64-linux-shared.cmake
src/: CMakeLists.txt
src/lib/: CMakeLists.txt  hello.c  hello.h
