cmake_minimum_required(VERSION 3.17)

PROJECT(freetype)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE "${CMAKE_BINARY_DIR}/bin/${CMAKE_GENERATOR_PLATFORM}/lib")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE "${CMAKE_BINARY_DIR}/bin/${CMAKE_GENERATOR_PLATFORM}/lib")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_BINARY_DIR}/bin/${CMAKE_GENERATOR_PLATFORM}/lib")

set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}-${CPACK_SYSTEM_NAME}_${CMAKE_GENERATOR_PLATFORM}")
set(CPACK_INCLUDE_TOPLEVEL_DIRECTORY OFF)

ADD_SUBDIRECTORY(freetype)

